--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ authors = [
     { name = "Daniel Kuettel", email = "dkuettel@gmail.com" }
 ]
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "msgspec>=0.20.0",
+    "rich>=14.3.2",
+]
 
 [project.scripts]
 nixtools = "nixtools:main"
